conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: not found: value False
if (estFaceMur() == False) {avance()} 
                    ^